src/test/ui/higher-rank-trait-bounds/issue-59311.stderr
error: higher-ranked lifetime error
  --> $DIR/issue-59311.rs:17:9
   |
LL |     v.t(|| {});
   |         ^^^^^
   |
   = note: could not prove for<'a> &'a V: 'static

error: aborting due to previous error

